--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "he/his"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Chengdu City, China"
-  employer         : "University of Electronic Science and Technology of China"
+  employer         : "UESTC"
   uri              : # URL
   email            : "panzhao@std.uestc.edu.cn" 
 
