--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,9 @@ main:
   - title: "Talks and Presentations"
     url: /talks/    
 
+  - title: "News"
+    url: /news/    
+
   # - title: "Teaching"
     # url: /teaching/    
     
